# oxistore

./: CHANGELOG.md  Cargo.toml  Dockerfile.ffi-audit  LICENSE  README.md  TODO.md  deny.toml
crates/oxistore/: Cargo.toml  README.md  TODO.md
crates/oxistore-blob/: Cargo.toml  README.md  TODO.md
crates/oxistore-blob-azure/: Cargo.toml  README.md
crates/oxistore-blob-azure/src/: config.rs  error.rs  lib.rs  sign.rs
crates/oxistore-blob-azure/tests/: integration.rs
crates/oxistore-blob-gcs/: Cargo.toml  README.md
crates/oxistore-blob-gcs/src/: auth.rs  config.rs  error.rs  lib.rs
crates/oxistore-blob-gcs/tests/: integration.rs
crates/oxistore-blob-s3/: Cargo.toml  README.md
crates/oxistore-blob-s3/src/: config.rs  error.rs  http_client.rs  lib.rs  multipart.rs  presign.rs  retry.rs  sigv4.rs
crates/oxistore-blob-s3/tests/: integration.rs  sigv4_reference.rs
crates/oxistore-blob/benches/: blob_ops.rs
crates/oxistore-blob/src/: cas.rs  cloud.rs  error.rs  lib.rs  local.rs  memory.rs
crates/oxistore-blob/tests/: advanced_tests.rs  cache_integration.rs  cas_tests.rs  columnar_integration.rs  comprehensive.rs  facade_integration.rs  local.rs  memory.rs  new_features.rs  oxisql_lob_integration.rs
crates/oxistore-cache/: Cargo.toml  README.md  TODO.md
crates/oxistore-cache/benches/: cache_ops.rs
crates/oxistore-cache/src/: arc.rs  blob_cache.rs  bounded.rs  builder.rs  columnar_cache.rs  lfu.rs  lib.rs  lru.rs  sharded.rs  sketch.rs  sql_cache.rs  stats.rs  sync.rs  tinylfu.rs  write_adapter.rs
crates/oxistore-cache/tests/: advanced_cache.rs  arc.rs  lfu_tinylfu.rs  lru.rs  new_features.rs  proptest_cache.proptest-regressions  proptest_cache.rs
crates/oxistore-columnar/: Cargo.toml  README.md  TODO.md
crates/oxistore-columnar/benches/: columnar_ops.rs
crates/oxistore-columnar/src/: lib.rs  partition.rs  predicate.rs  reader.rs  streaming.rs  writer.rs
crates/oxistore-columnar/tests/: advanced_columnar.rs  columnar_store_trait.rs  complex_arrow_types.rs  comprehensive.rs  compression.rs  external_parquet.rs  new_features.rs  partition.rs  proptest_roundtrip.rs  roundtrip.rs  streaming_memory.rs
crates/oxistore-compress/: Cargo.toml  README.md  TODO.md
crates/oxistore-compress/benches/: compress_ops.rs
crates/oxistore-compress/src/: codec.rs  lib.rs  parquet_shim.rs
crates/oxistore-compress/tests/: advanced_compress.rs  error_bridge.rs  parquet.rs  proptest_compress.rs  round_trip.rs  truncated.rs
crates/oxistore-core/: Cargo.toml  README.md  TODO.md
crates/oxistore-core/benches/: dispatch.rs
crates/oxistore-core/src/: lib.rs  typed.rs
crates/oxistore-core/tests/: range_item_invariants.proptest-regressions  range_item_invariants.rs  typed_kv.rs
crates/oxistore-encrypt/: Cargo.toml  README.md  TODO.md
crates/oxistore-encrypt/benches/: encrypt_ops.rs
crates/oxistore-encrypt/src/: aead.rs  bridge_aws_lc.rs  cell.rs  cipher_builder.rs  decorator.rs  envelope.rs  error.rs  keyring.rs  keys.rs  lib.rs  snapshot.rs  txn.rs
crates/oxistore-encrypt/tests/: advanced_encrypt.rs  comprehensive.rs  encrypt_over_oxisql_pool.rs  encrypt_over_redb.rs  encrypt_over_sled.rs  envelope.rs  new_features.rs  oxicrypto_aws_lc_compat.rs  proptest_cell_id.rs  round_trip.rs  tamper.rs
crates/oxistore-kv-fjall/: Cargo.toml  README.md  TODO.md
crates/oxistore-kv-fjall/benches/: cross_backend.rs  write_heavy.rs
crates/oxistore-kv-fjall/src/: error.rs  lib.rs  store.rs
crates/oxistore-kv-fjall/tests/: advanced_fjall.rs  comprehensive.rs  facade_integration.rs  iter.rs  kvstore.rs  new_features.rs  oxisql_integration.rs  snapshot.rs  ttl_tests.rs  txn.rs
crates/oxistore-kv-redb/: Cargo.toml  README.md  TODO.md
crates/oxistore-kv-redb/benches/: redb_ops.rs
crates/oxistore-kv-redb/src/: lib.rs
crates/oxistore-kv-redb/tests/: advanced_redb.rs  comprehensive.rs  integration.rs  kv.rs  new_features.rs  oxisql_integration.rs  ttl_tests.rs
crates/oxistore-kv-sled/: Cargo.toml  README.md  TODO.md
crates/oxistore-kv-sled/benches/: sled_ops.rs
crates/oxistore-kv-sled/src/: lib.rs
crates/oxistore-kv-sled/tests/: advanced_sled.rs  comprehensive.rs  integration_facade.rs  integration_tokio_watch.rs  kv.rs  new_features.rs  oxisql_integration.rs  ttl_tests.rs  typed_store.rs
crates/oxistore/benches/: cached_vs_uncached.rs  facade_dispatch.rs
crates/oxistore/src/: lib.rs
crates/oxistore/tests/: advanced_facade.rs  cross_backend.rs  facade_comprehensive.rs  facade_depth.rs  facade_reexports.rs  facade_smoke.rs  integration.rs  smoke.rs
scripts/: ffi-audit.sh
