[workspace]
resolver = "2"
members = [
    "crates/oxistore-core",
    "crates/oxistore-kv-redb",
    "crates/oxistore-kv-sled",
    "crates/oxistore-kv-fjall",
    "crates/oxistore",
    "crates/oxistore-columnar",
    "crates/oxistore-cache",
    "crates/oxistore-blob",
    "crates/oxistore-blob-azure",
    "crates/oxistore-blob-s3",
    "crates/oxistore-blob-gcs",
    "crates/oxistore-encrypt",
    "crates/oxistore-compress",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
authors = ["COOLJAPAN OU (Team Kitasan)"]
license = "Apache-2.0"
repository = "https://github.com/cool-japan/oxistore"
description = "OxiStore is the COOLJAPAN-blessed Pure Rust low-level storage layer: embedded key-value, columnar in-memory & on-disk, and blob storage abstraction (local fs + cloud)."

[workspace.dependencies]
oxistore = { path = "crates/oxistore", version = "0.2" }
oxistore-core = { path = "crates/oxistore-core", version = "0.2" }
oxistore-encrypt = { path = "crates/oxistore-encrypt", version = "0.2" }
oxistore-compress = { path = "crates/oxistore-compress", version = "0.2" }
oxiarc-deflate = { version = "0.3.3" }
oxiarc-core = { version = "0.3.3" }
oxicrypto = { version = "0.2.0" }
oxicrypto-sig = { version = "0.2.0" }
oxistore-kv-redb = { path = "crates/oxistore-kv-redb", version = "0.2" }
oxistore-kv-sled = { path = "crates/oxistore-kv-sled", version = "0.2" }
oxistore-kv-fjall = { path = "crates/oxistore-kv-fjall", version = "0.2" }
oxistore-columnar = { path = "crates/oxistore-columnar", version = "0.2" }
oxistore-cache = { path = "crates/oxistore-cache", version = "0.2" }
oxistore-blob = { path = "crates/oxistore-blob", version = "0.2" }
oxistore-blob-azure = { path = "crates/oxistore-blob-azure", version = "0.2" }
oxistore-blob-s3 = { path = "crates/oxistore-blob-s3", version = "0.2" }
oxistore-blob-gcs = { path = "crates/oxistore-blob-gcs", version = "0.2" }
redb = { version = "4.1.0" }
sled = { version = "0.34", default-features = false }
fjall = { version = "3.1.4" }
criterion = { version = "0.8.2", features = ["html_reports"] }
arrow = { version = "58.3.0" }
parquet = { version = "58.3.0", default-features = false, features = ["arrow", "experimental"] }
hashlink = { version = "0.11" }
bytes = { version = "1" }
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt", "rt-multi-thread", "macros", "time"] }
sha2 = { version = "0.11.0", default-features = false }
digest = { version = "0.11.3", default-features = false }
hmac = { version = "0.13.0" }
base64 = { version = "0.22.1" }
async-trait = { version = "0.1" }
aws-sigv4 = { version = "1.4.4", default-features = false, features = ["sign-http", "http1"] }
aws-credential-types = { version = "1.2.14" }
quick-xml = { version = "0.40.1" }
url = { version = "2.5.8" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0" }
oxihttp-client = { version = "0.2.0", features = ["tls"] }
hex = { version = "0.4" }
proptest = { version = "1" }
ahash = { version = "0.8" }
oxisql-core = "0.2.1"
keyring-core = { version = "1.0.0" }
