[package]
name = "oxistore-blob-azure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Azure Blob Storage BlobStore adapter for OxiStore (Pure Rust, HMAC-SHA256 Shared Key)"
keywords = ["azure", "blob-storage", "storage", "pure-rust"]
categories = ["database", "api-bindings"]

[dependencies]
oxistore-blob = { workspace = true }
oxistore-core = { workspace = true }
oxihttp-client = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "time"] }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
