[package]
name = "oxistore-encrypt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cell-level AEAD encryption decorator for OxiStore KV stores (XChaCha20-Poly1305)"
categories = ["database-implementations", "cryptography"]
keywords = ["kv-store", "encryption", "aead", "pure-rust", "cooljapan"]

[features]
default = []
encrypt = []
# Enable serde Serialize/Deserialize for CellId
serde = ["dep:serde"]
# Enable real OS keyring integration (macOS Keychain, Linux secret-service,
# Windows Credential Manager) via the `keyring-core` crate.
os-keyring = ["dep:keyring-core"]
# Enable the aws-lc-rs backed AEAD bridge (`AwsLcOxistoreAead`). This pulls in
# the C-backed aws-lc-rs via oxicrypto-adapter-aws-lc; default features stay
# 100% Pure Rust.
oxicrypto-aws-lc = ["dep:oxicrypto-adapter-aws-lc"]

[dependencies]
oxistore-core.workspace = true
oxicrypto.workspace = true
oxicrypto-adapter-aws-lc = { workspace = true, optional = true, features = ["aws-lc"] }
serde = { workspace = true, optional = true }
keyring-core = { workspace = true, optional = true }

[dev-dependencies]
oxistore-kv-redb = { path = "../oxistore-kv-redb" }
oxistore-kv-sled = { path = "../oxistore-kv-sled" }
proptest.workspace = true
criterion.workspace = true
serde_json.workspace = true
# Cross-workspace dev-dep for EncryptedPooledStore integration test.
oxisql-pool = { version = "0.2.1", features = ["embedded"] }
tokio.workspace = true

[[bench]]
name = "encrypt_ops"
harness = false
