[package]
name = "oxistore-kv-fjall"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LSM-tree KV store backend for OxiStore via fjall (Pure Rust)"
categories = ["database-implementations"]
keywords = ["fjall", "lsm", "kv-store", "storage", "pure-rust"]

[dependencies]
oxistore-core.workspace = true
fjall.workspace = true

[dev-dependencies]
criterion.workspace = true
oxistore-kv-redb.workspace = true
oxistore-kv-sled.workspace = true
oxistore-core.workspace = true

[[bench]]
name = "write_heavy"
harness = false

[[bench]]
name = "cross_backend"
harness = false
