[package]
name = "oxistore-kv-redb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "redb backend for OxiStore — Pure Rust embedded key-value store"
categories = ["database-implementations"]
keywords = ["redb", "kv-store", "storage", "pure-rust", "oxistore"]

[dependencies]
oxistore-core.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true
oxistore = { path = "../oxistore" }
oxistore-cache = { path = "../oxistore-cache" }
tokio.workspace = true
oxisql-embedded = { version = "0.2.1", features = ["redb-storage"] }
oxisql-core-02 = { package = "oxisql-core", version = "0.2.1" }

[[bench]]
name = "redb_ops"
harness = false
