[package]
name = "oxistore-kv-sled"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "sled backend for OxiStore — Pure Rust embedded key-value store"
categories = ["database-implementations"]
keywords = ["sled", "kv-store", "storage", "pure-rust", "oxistore"]

[dependencies]
oxistore-core.workspace = true
sled.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
typed = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
criterion.workspace = true
serde.workspace = true
serde_json.workspace = true
oxistore = { path = "../oxistore", features = ["kv-sled"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
oxisql-embedded = { version = "0.3.1", features = ["sled-storage"] }
oxisql-core-02 = { package = "oxisql-core", version = "0.3.1" }

[[bench]]
name = "sled_ops"
harness = false
